force-app/main/default/objects/custom_create65__c/custom_create65__c.object-meta.xml
<CustomObject>
    <label>Custom created object65</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects65</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>