force-app/main/default/objects/custom_create65__c/fields/custom_create_65field507__c.field-meta.xml
<CustomField>
    <fullName>custom_create_65field507__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 65field507</label>
    <type>Checkbox</type>
</CustomField>